--- a/css/styles.css
+++ b/css/styles.css
@@ -145,6 +145,7 @@ color: var(--accent-color);
  .hero{
    background-color: var(--footer-background-color);
    padding: 200px 0;
+   text-align: center;
 
  }
 .hero-title{
@@ -169,9 +170,8 @@ color: var(--accent-color);
    letter-spacing: 0.06em;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
-   outline: 2px solid tomato;
-   
-   
+     padding: 10px 32px;
+   text-align: center;
 }
 
 /* sections index*/
@@ -200,6 +200,9 @@ font-weight: 700;
 .staff{
    background-color: var(--primary-button-color);
    
+}
+.photo{
+   margin-bottom: 30px;
 }
 .staff-list .name{
    color: var(--primary-text-color);
@@ -232,7 +235,22 @@ font-weight: 500;
    text-align: center;
    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       border-radius: 4px;
+      padding: 6px 22px;
 }
+.button-all{
+   padding: 6px 25px;
+   color: var(--primary-text-color);
+      background-color: var(--primary-button-color);
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.63;
+      font-family: inherit;
+      text-align: center;
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      border-radius: 4px;
+}
+.button-all:hover,
+.button-all:focus,
 .button:hover,
 .button:focus{
    color: var(--primary-white-color);
@@ -248,13 +266,27 @@ font-weight: 500;
 .work-types{
    color: var(--secondary-text-color);
    font-size: 16px;
-      line-height: 1.88;     
+      line-height: 1.88;  
+      padding-left: 24px;  
+      margin-bottom: 20px; 
 }
 .services{
     text-decoration: none;
+
 }
-
-
+.service-photo{
+   margin-bottom: 20px;
+}
+.services .list-title{
+   margin-bottom:4px;
+   padding-left: 24px;
+}
+.cart{
+   width: 370px;
+   border: 1px solid #EEEEEE;
+   margin-bottom: 30px;
+   
+}
 
 
 
