--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ color: var(--primary-text-color);
  }
 .section
 {padding : 94px 0;
-   outline : 2px solid tomato;
+  
 }
 
    
@@ -36,11 +36,10 @@ color: var(--primary-text-color);
    width: 1200px;
    padding: 0 15px;
    margin: 0 auto;
-   outline: 2px solid tomato;
+ 
   
 }
 .header .container{
-   /* padding: 32px 15px; */
    border-bottom: 1px solid #ECECEC;
    display: flex; 
    align-items: center;
@@ -54,15 +53,19 @@ color: var(--primary-text-color);
       font-size: 26px;
       line-height: 1.19;
       text-decoration: none; 
-        
-    }
+       }
 
  .logo.first {
     color: #000000;
+    font-family: Raleway,sans-serif;
+      font-weight: 700;
+      font-size: 26px;
+      line-height: 1.19;
+      text-decoration: none; 
        display: block;
-     align-items: center;
-      /* margin-bottom: 25px;   */
-   margin-right: 93px;      }
+      margin-right: 93px;    
+   
+   }
 
  
  .visually-hidden {
@@ -129,7 +132,6 @@ font-weight: 500;
    line-height: 1.14;
    letter-spacing: 0.02em;
    text-decoration: none;
-   outline: 2px solid tomato;
     display: block;
          padding: 32px 0;
  }
@@ -143,7 +145,7 @@ color: var(--accent-color);
 }
 
  /* Basement */
- .basement{
+ .footer{
    background-color:var(--footer-background-color);
    padding: 60px 0;
  }
@@ -157,7 +159,7 @@ color: var(--accent-color);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-   padding: 60px 0;
+  
     
  }
 
