--- a/css/styles.css
+++ b/css/styles.css
@@ -101,8 +101,7 @@ color: var(--primary-text-color);
       line-height: 1.14;
       letter-spacing: 0.02em;
       text-decoration: none;
-      outline: 2px solid tomato;
-      
+           
  }
  .site-nav .link.current {
   color: var(--accent-color);
@@ -144,14 +143,17 @@ color: var(--accent-color);
 color: var(--accent-color); 
 }
 
- /* Basement */
+ /* footer */
  .footer{
    background-color:var(--footer-background-color);
    padding: 60px 0;
  }
  .logo.second {
-    color: var(--primary-white-color);
-    margin-bottom: 20px;
+   color: var(--primary-white-color);
+   display: block;
+   margin-bottom: 20px;
+
+
  }
 
  .basement {
@@ -159,7 +161,7 @@ color: var(--accent-color);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-  
+  display: block;
     
  }
 
