--- a/css/styles.css
+++ b/css/styles.css
@@ -324,6 +324,7 @@ font-weight: 500;
    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       border-radius: 4px;
       padding: 6px 22px;
+      border: 0;
 }
 .button-all{
    padding: 6px 25px;
@@ -336,6 +337,7 @@ font-weight: 500;
       text-align: center;
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       border-radius: 4px;
+      border: 0;
 }
 .button-all:hover,
 .button-all:focus,
@@ -344,6 +346,17 @@ font-weight: 500;
    color: var(--primary-white-color);
     background-color:var(--accent-color);
 }
+.buttons{
+   display: flex;
+justify-content: center;
+margin-bottom: 50px;
+}
+
+.buttons .item:not(:last-child){
+margin-right: 8px;
+}
+
+
 .list-title {
    font-weight: 700;
    font-size: 18px;
@@ -360,7 +373,6 @@ font-weight: 500;
 }
 .services{
     text-decoration: none;
-
 }
 .service-photo{
    margin-bottom: 20px;
@@ -372,9 +384,22 @@ font-weight: 500;
 .cart{
    width: 370px;
    border: 1px solid #EEEEEE;
-   margin-bottom: 30px;
-   
+  
 }
 
-
+.service-list{
+   display: flex;
+   flex-wrap: wrap;
+   gap:  30px;
+}
+/* .service-list .cart{
+   margin-right: 30px;
+   margin-bottom: 30px;
+}
+.service-list .cart:last-child(-n+3){
+   margin-bottom: 0;
+}
+.service-list .cart:nth-child(3n){
+   margin-right: 0;
+} */
 
