--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
    --primary-button-color: #F5F4FA;
 --footer-background-color:#2F303A;
 --contacts-basement-color: rgba(255, 255, 255, 0.6);
+--border-cart-color:#eeeeee;
 }
 
 body{
@@ -255,7 +256,9 @@ color: var(--accent-color);
 .we-do{
    display: flex;
 }
-
+.we-do.section{
+   padding-top: 0;
+}
 img {
    display: block;
    max-width: 100%;
@@ -368,38 +371,43 @@ margin-right: 8px;
    color: var(--secondary-text-color);
    font-size: 16px;
       line-height: 1.88;  
-      padding-left: 24px;  
-      margin-bottom: 20px; 
+      /* padding-left: 24px;  
+      margin-bottom: 20px;  */
 }
 .services{
     text-decoration: none;
 }
-.service-photo{
+/* .service-photo{
    margin-bottom: 20px;
-}
+} */
 .services .list-title{
    margin-bottom:4px;
-   padding-left: 24px;
+   /* padding-left: 24px; */
 }
 .cart{
    width: 370px;
-   border: 1px solid #EEEEEE;
+  
   
 }
 
 .service-list{
    display: flex;
    flex-wrap: wrap;
-   gap:  30px;
+   /* gap:  30px; */
 }
-/* .service-list .cart{
+.service-item {
    margin-right: 30px;
-   margin-bottom: 30px;
+   /* margin-bottom: 30px; */
 }
-.service-list .cart:last-child(-n+3){
-   margin-bottom: 0;
-}
-.service-list .cart:nth-child(3n){
+.service-item:not(:last-child(-n+3)){
+    margin-bottom: 30px;
+  } 
+.service-item:nth-child(3n){
    margin-right: 0;
-} */
+}
+.cart-info{
+   padding: 20px 24px;
+   border: 1px solid var(--border-cart-color);
+  border-top: 0;
+}
 
