--- a/css/styles.css
+++ b/css/styles.css
@@ -40,9 +40,11 @@ color: var(--primary-text-color);
  
   
 }
-.header .container{
+.header{
    border-bottom: 1px solid #ECECEC;
-   display: flex; 
+}
+.header .container{
+    display: flex; 
    align-items: center;
 
 }
@@ -317,7 +319,7 @@ font-weight: 500;
    line-height: 1.63;
    font-family: inherit;
    text-align: center;
-   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  
       border-radius: 4px;
       padding: 6px 22px;
       border: 0;
@@ -331,7 +333,6 @@ font-weight: 500;
       line-height: 1.63;
       font-family: inherit;
       text-align: center;
-      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       border-radius: 4px;
       border: 0;
 }
@@ -341,6 +342,7 @@ font-weight: 500;
 .button:focus{
    color: var(--primary-white-color);
     background-color:var(--accent-color);
+   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .buttons{
    display: flex;
